maked Logo Slight bigger

--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
 </head>
 
 <body class="bg-white min-h-screen">
-  <div id="preloader" class="fixed inset-0 flex flex-col items-center justify-center bg-primary z-[999]">
-    <p class="text-3xl font-bold mb-4 animate-pulse text-[#BC8749]">Welcome To</p>
-    <img src="./icons/kohinoor-logo.png" alt="Logo" class="w-64 h-32 animate-pulse">
+  <div id="preloader" class="fixed inset-0 flex items-center justify-center bg-primary z-[999]">
+    <div class="flex flex-col items-center justify-center max-h-[66vh]">
+      <p class="text-3xl md:text-5xl font-bold mb-4 animate-pulse text-[#BC8749] text-center">
+        Welcome To
+      </p>
+      <img src="./icons/kohinoor-logo.png" alt="Logo" class="animate-pulse max-h-[66vh] w-auto object-contain" />
+    </div>
   </div>
   <header
     class="fixed w-[98%] justify-between mt-2 left-1/2 -translate-x-1/2 bg-primary backdrop-blur-md shadow-lg z-50 rounded-lg">
@@ -2108,7 +2112,7 @@
               </p>
             </div>
             <div class="absolute bottom-0 right-0 w-2/5">
-              <img src="./images/Tassels/Tassels 266.webp" alt="Tassels" class="max-w-40 mix-blend-multiply" />
+              <img src="./images/Tassels/Tassels188.webp" alt="Tassels" class="max-w-40 mix-blend-multiply" />
             </div>
           </div>
           <div class="relative bg-gray-100 p-5 h-72 flex flex-col justify-between overflow-hidden">
