--- a/Tracks/imp-white-track.html
+++ b/Tracks/imp-white-track.html
@@ -1,30 +1,4 @@
-#!/bin/bash
-
-# Get script directory
-script_dir="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-cd "$script_dir"
-
-# Loop through folders
-for dir in */; do
-    folder_name="${dir%/}"
-
-    # Generate HTML file name
-    html_file=$(echo "$folder_name" | tr '[:upper:]' '[:lower:]' | tr ' ' '-')".html"
-
-    # Find main .webp image in folder
-    webp_image=$(find "$folder_name" -maxdepth 1 -type f -iname "*.webp" | head -n 1)
-
-    if [ -n "$webp_image" ]; then
-        image_name_with_ext=$(basename "$webp_image")
-        image_name_no_ext="${image_name_with_ext%.webp}"
-    else
-        image_name_with_ext=""
-        image_name_no_ext=""
-    fi
-
-    # Start writing HTML file
-    cat <<EOF > "$html_file"
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -123,10 +97,10 @@ for dir in */; do
     <section class="flex flex-col md:flex-row items-center gap-6 md:gap-8 lg:gap-12 mb-16">
       <div class="w-full md:w-2/3">
         <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold text-gray-800 mb-4">
-          $folder_name
+          Imp White Track
         </h1>
         <p class="text-gray-600 leading-relaxed mb-6">
-          The $folder_name is a premium-quality
+          The Imp White Track is a premium-quality
           curtain track designed for smooth and effortless curtain movement.
           Crafted with a durable electro-coated ivory finish, it offers
           enhanced rust resistance, longevity, and a sleek aesthetic that
@@ -135,13 +109,13 @@ for dir in */; do
           superior load-bearing capacity for heavy drapes or light curtains
           alike. Its precision-engineered design allows for easy installation
           and compatibility with various curtain styles. Upgrade your window
-          treatments with $folder_name, the perfect
+          treatments with Imp White Track, the perfect
           blend of durability, elegance, and functionality.
         </p>
       </div>
       <div class="w-full md:w-1/3">
-        <img src="../images/Tracks/$folder_name/$image_name_with_ext"
-          alt="$image_name_no_ext" class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
+        <img src="../images/Tracks/Imp White Track/Imp White Track.webp" alt="Imp White Track"
+          class="w-full h-auto object-contain rounded-lg shadow-md bg-backColor" />
       </div>
     </section>
     <!-- Products Section -->
@@ -151,36 +125,20 @@ for dir in */; do
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-EOF
-
-    # Look inside parts/ subfolder for .webp images
-    parts_dir="$folder_name/parts"
-    if [ -d "$parts_dir" ]; then
-        count=1
-        while IFS= read -r img; do
-            img_with_ext=$(basename "$img")
-            img_no_ext="${img_with_ext%.webp}"
-  echo '<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-          <img src="../images/Tracks/'$folder_name'/parts/'$img_with_ext'"
-            alt="'$img_no_ext'" class="w-full h-48 object-contain mb-4 bg-backColor" />
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="../images/Tracks/Imp White Track/parts/Imp White Track Runner.webp" alt="Imp White Track Runner"
+            class="w-full h-48 object-contain mb-4 bg-backColor" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
-              '$img_no_ext'
+              Imp White Track Runner
             </h3>
 
             <div class="flex items-center">
               <div class="text-yellow-400 mr-1">★★★★★</div>
             </div>
           </div>
-        </div> ' >> "$html_file"
-
-            count=$((count + 1))
-        done < <(find "$parts_dir" -maxdepth 1 -type f -iname "*.webp")
-    fi
-
-    # Close HTML
-    cat <<EOF >> "$html_file"
-          </div>
+        </div>
+      </div>
     </section>
     <!-- Related Products Section -->
     <section id="products">
@@ -283,10 +241,12 @@ EOF
             Transform your windows with our premium curtain accessories.
           </p>
           <div class="flex space-x-4">
-            <a href="https://www.facebook.com/KohinoorIndia.org/" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.facebook.com/KohinoorIndia.org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-facebook-fill"></i>
             </a>
-            <a href="https://www.instagram.com/kohinoor_india_org/" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
+            <a href="https://www.instagram.com/kohinoor_india_org/"
+              class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
               <i class="ri-instagram-line"></i>
             </a>
             <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20">
@@ -429,6 +389,3 @@ EOF
 </body>
 
 </html>
-EOF
-
-done
