--- a/Tracks.html
+++ b/Tracks.html
@@ -1166,6 +1166,18 @@
             </div>
           </div>
         </a>
+        <a href="./Tracks/imp-black-track.html">
+          <div
+            class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+            <img src="./images/Tracks/Imp Black Track/Imp Black Track.webp" alt="Imp White Track"
+              class="w-full h-48 object-contain mb-4 bg-backColor" />
+            <div>
+              <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+                Imp Black Track
+              </h3>
+            </div>
+          </div>
+        </a>
       </div>
     </section>
     <section id="catalogue" class="text-white py-10">
